# cheatsheets_c

./: .cheatsheetsrc  Makefile  TODO  argparse.h  cheatsheets.c  cheatsheets.h  configure.ac  main.c  template.txt
src/: Makefile.am
tests/: Makefile.am  test1.c
